--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -49,6 +49,7 @@
     color: white;
     -webkit-text-stroke: 0.5px rgb(161, 161, 161);
     font-size: 1.2rem;
+    cursor: pointer;
 }
 
 .content{
